fixed scrollbar and optimized websocket hook boost

--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap");
+@import url('style.$PLASMO_BROWSER.css');
 
 @tailwind base;
 @tailwind components;
@@ -42,17 +43,4 @@
         height: 0px;
         opacity: 0;
     }
-}
-
-.bjf-scrollbar::-webkit-scrollbar {
-    width: 5px;
-}
-
-.bjf-scrollbar::-webkit-scrollbar-track {
-    background-color: transparent;
-}
-
-.bjf-scrollbar::-webkit-scrollbar-thumb {
-    background-color: #808080;
-    border-radius: 20px;
 }
